# -V1.0

./: README.md
Mechanical/: 侧面支撑板.SLDPRT  前挡.SLDPRT  后挡.SLDPRT  大腿.SLDPRT  小腿.SLDPRT  底板.SLDPRT  底部盖板.SLDPRT  狗装配体.SLDASM  零件3.SLDPRT  雷神锤.SLDPRT  顶部盖板.SLDPRT
Mechanical/生产文件/: 侧面支撑板.STL  前挡.STL  后挡.STL  垫片.STL  大腿.STL  小腿.STL  小腿2.SLDPRT  小腿2.STL  底板.STL  顶部盖板.SLDPRT  顶部盖板.STL
Software/ohosdog/: ohos_config.json
Software/ohosdog/applications/genkipi/app/: BUILD.gn
Software/ohosdog/applications/genkipi/app/dog_py/: BUILD.gn  dog.c  dog.h  genki_web_ohosdog.c  main.c
